app/assets/stylesheets/application.scss
@import 'bourbon/bourbon';                                                                                     
@import 'base/base';                                                                                            
@import 'neat/neat'; 
		
$magenta: #490A3D;
$pink: #BD1550;
$orange: #E97F02;
$yellow: #F8CA00;
$lime: #8A9B0F;

#main {
  padding: 25px;
}

.acoustic-info-box {
  background: $lime;
  border: 1px dotted black;
  border-radius: 5px;
  height: 210px;
}

.acoustic-info-box li {
  float: left;
  display: inline;
}

.selected-track-info-box h2 {
  font-size: 2.2em;
  padding-top: 0.5em;
}

.selected-track-info-box img {
  width: 15em;
  margin-left: 15px;
  float: right;
}


.trackbox {
  float:left;
  margin-bottom: 35px;

  .mdl-card {
    width: 300px;
    min-height: 400px;
    margin: 10px;
    border: 2px solid grey;
    border-radius: 10px;
    -webkit-transition: all 200ms ease-in;
    -webkit-transform: scale(1); 
    -ms-transition: all 200ms ease-in;
    -ms-transform: scale(1); 
    -moz-transition: all 200ms ease-in;
    -moz-transform: scale(1);
    transition: all 200ms ease-in;
    transform: scale(1); 
  }

  .mdl-card:hover {
    box-shadow: 0px 0px 150px #000000;
    z-index: 2;
    -webkit-transition: all 200ms ease-in;
    -webkit-transform: scale(1);
    -ms-transition: all 200ms ease-in;
    -ms-transform: scale(1);   
    -moz-transition: all 200ms ease-in;
    -moz-transform: scale(1);
    transition: all 200ms ease-in;
    transform: scale(1);
  }

  .mdl-card__subtitle-text {
    min-height: 85px;
  }
}

.trackbox:nth-child(1n) .mdl-card {
  background-color: $lime;
}
.trackbox:nth-child(2n) .mdl-card {
  background-color: $orange;
}
.trackbox:nth-child(3n) .mdl-card {
  background-color: $pink;
}
.trackbox:nth-child(4n) .mdl-card {
  background-color: $yellow;
}

.option-box {
  width: 95%;
  padding-top: 0px;
  padding-left: 100px;
  clear: both;
}

.sliders {
  width: 95%;
}

.sliders .mdl-button {
  margin: 10px;
}

.slider { 
width: 250px;
padding: 10px;
float: left;
}

.recommendation-list {
  clear: both;
}

.selected-track-box {
  float: right;
  width: 50em;
}
.selected-track {
  .mdl-button {
    width: 2em;
    float: right;
    clear: both;
  }
}
.search-bar {
  width : 60em;

  .mdl-button {
    float: right;
  }
}

// TOASTIES 

.toasty-container {
  padding: 1em;
  border-radius: 5px;
  cursor: pointer;
  box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.5);
  color: white;
  font-size: 13px;
  z-index: 99;
}

.toasty-title {
  font-size: 1em;
  margin: 0;
}

.toasty-message {
  font-size: 0.9em;
  margin-top: 0.5em;
  margin-bottom: 0;
}

.toasty-success {
  background-color: #2ECC40;
}

.toasty-warning {
  background-color: #FF851B;
}

.toasty-error {
  background-color: #FF4136;
}

.animated {
  animation-duration: 1s;
  animation-fill-mode: both;
}

@keyframes bounceInRight {
  from, 60%, 75%, 90%, to {
    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
  }

  from {
    opacity: 0;
    transform: translate3d(3000px, 0, 0);
  }

  60% {
    opacity: 1;
    transform: translate3d(-25px, 0, 0);
  }

  75% {
    transform: translate3d(10px, 0, 0);
  }

  90% {
    transform: translate3d(-5px, 0, 0);
  }

  to {
    transform: none;
  }
}

.bounceInRight {
  animation-name: bounceInRight;
}

@keyframes fadeOutRightBig {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
    transform: translate3d(2000px, 0, 0);
  }
}

.fadeOutRightBig {
  animation-name: fadeOutRightBig;
}

.mdl-card__actions .material-icons {
  float: right;
  margin: 10px;
}

.mdl-card__actions .material-icons:hover {
  opacity: 0.5
}

.mdl-card__actions a {
  color: black;
}

.top-buttons {
  display: inline-block;
  width: 75%;
}

.top-buttons .mdl-button {
  float: left;
  margin: 10px;
}

